<resources>
    <string name="app_name">Honey Co.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="no_internet_exit_button">Exit</string>
    <string name="no_internet_retry_button">Retry</string>
    <string name="have_or_not_have_account_txtcolor">#FF9800</string>
    <string name="update_profile_successfully">Updated successfully</string>
    <string name="select_chooser">Select any Image</string>
    <string name="no_image_select">No Image is selected</string>
    <string name="check_you_email">Please check your email</string>
    <string name="enter_in_draw_successfully">Entered successfully</string>
    <string name="enter_in_draw_failed">Failed</string>
    <string name="add_a_new_product">Add a new Product</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="camera">Camera</string>
    <string name="price">Price :</string>
    <string name="_120">$120</string>
    <string name="your_email">Your email</string>
    <string name="reset">reset</string>
    <string name="forgot_line">By clicking reset,\nyou will receive an email to reset your password</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="i_m_an_admin">I\'m an Admin</string>
    <string name="i_m_not_an_admin">I\'m not an Admin</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product ID</string>
    <string name="product_category">Product Category</string>
    <string name="product_price">Product Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="enter_in_draw">Enter Now</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="HoneyBox">HoneyBox</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">Home</string>
    <string name="draws">Your Giveaways</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="delete">delete</string>
    <string name="Settings">Settings</string>

    <string name="splash_screen">splash_screen</string>
    <string name="reg_activity_logo">reg_activity_logo</string>
    <string name="explore">Explore</string>
    <string name="about">About</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="entered">Entered</string>
    <string name="about_body_two">We also work with social media influencers as well as small to medium
        size businesses to provide a wide array of promotional items to chose from which will
        be available to use in free of charge giveaways.Our current draws are free to enter and upon winning
        we will send the prize to the winner after confirming their credentials.</string>
    <string name="about_body_one">Honey Collaboration is a Giveaway/eCommerce platform based in the United Kingdom.
        We run giveaways on many different items such as Gadgets, Sports Gear, Fashion item etc.</string>
    <string name="about_contact_us">Contact Us</string>
    <string name="about_header">What is Honey Co.?</string>
    <string name="about_title">Honey Co.</string>
    <string name="logout_menu_item">Logout</string>
    <string name="about_email_image">about_email_image</string>
    <string name="about_email_address">honeycollaborations@gmail.com</string>
    <string name="rate_or_hate_next_giveaways">Rate or Hate Next Giveaways</string>

    <string-array name="product_categories">
        <item>Select</item>
        <item>Electronics</item>
        <item>Sports</item>
        <item>Shoes</item>
        <item>Shirts</item>
        <item>Dresses</item>
        <item>Gifts</item>
        <item>Babies</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="login_page_logo">login_page_logo</string>
    <string name="like_btn_image">like_btn_image</string>
    <string name="dislike">0</string>
    <string name="like">0</string>
    <string name="sign_up_logo">sign_up_logo</string>
    <string name="dislike_image_view">dislike image view</string>
    <string name="click_me">Click me</string>
    <string name="about_image_logo">About Image Logo</string>
    <string name="instagram_tv">Instagram</string>
    <string name="tool_bar_image">Tool Bar Image</string>
    <string name="rate_intro_iv">rate intro iv</string>
    <string name="delete_account_menu">Delete account</string>
</resources>