<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_name"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_draws"
            android:icon="@drawable/ic_gift"
            android:title="@string/draws" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate_24"
            android:title="@string/rate_or_hate" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/Settings" />

    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about_24"
                android:title="@string/about" />

        </menu>
    </item>

</menu>