<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="atomsandbots.android.sweepsnatch.user.UI.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="atomsandbots.android.sweepsnatch.user.UI.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_draws"
        android:name="atomsandbots.android.sweepsnatch.user.UI.DrawFragment"
        android:label="Your Giveaways"
        tools:layout="@layout/fragment_draw" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="atomsandbots.android.sweepsnatch.user.UI.ExploreFragment"
        android:label="Explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="atomsandbots.android.sweepsnatch.user.UI.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="atomsandbots.android.sweepsnatch.user.UI.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />

</navigation>